--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ MONGODB_COLLECTION_NAME=sensor_data
 MQTT_BROKER_HOST=your_mqtt_broker_host_here
 MQTT_BROKER_PORT=8883
 MQTT_DATA_TOPIC=esp32/iot/data
+MQTT_CONTROL_TOPIC=esp32/iot/control
 MQTT_USERNAME=your_mqtt_username_here
 MQTT_PASSWORD=your_mqtt_password_here
 
