feat: Add action history functionality and update MQTT integration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ MQTT_BROKER_HOST=your_mqtt_broker_host_here
 MQTT_BROKER_PORT=8883
 MQTT_DATA_TOPIC=esp32/iot/data
 MQTT_CONTROL_TOPIC=esp32/iot/control
+MQTT_ACTION_HISTORY_TOPIC=esp32/iot/action-history
 MQTT_USERNAME=your_mqtt_username_here
 MQTT_PASSWORD=your_mqtt_password_here
 
